# oidar

./: Cargo.toml  README.md
oidar_base/: Cargo.toml
oidar_base/src/: lib.rs
oidar_base/src/core/: mod.rs
oidar_base/src/domain/backend/: mod.rs  ports.rs  service.rs
oidar_base/src/outbound/: cpal_player.rs  tokio_loader.rs
oidar_cli/: Cargo.toml
oidar_cli/src/: main.rs
oidar_cli/src/inbound/: easy_repl.rs  mod.rs
src/: dummy.rs  easy_repl.rs  main.rs
src/backend/: domain.rs  mod.rs
src/backend/decoder/: mod.rs
src/backend/loader/: mod.rs  zero.rs
src/backend/player/: mod.rs
src/core/: mod.rs  symphonia_decoder.rs
src/domain/backend/: models.rs  ports.rs  service.rs
src/domain/frontend/: ports.rs
src/frontend/: easy_repl.rs  mod.rs
src/inbound/: easy_repl.rs
src/outbound/: cpal_player.rs  dummy.rs  mod.rs  tokio_loader.rs
